"Finally found a proper way to make async logic instead of sync/round-robin one"